# Chussy

./: CMakeLists.txt  TT.cpp  TT.h  attacks.cpp  attacks.h  bitboards.cpp  bitboards.h  evaluation.h  magic.h  main.cpp  move.h  movegen.h  play.h  search.h  test.cpp  test.h  types.h
